--- a/Frontend/pages/catalogo/index.html
+++ b/Frontend/pages/catalogo/index.html
@@ -11,12 +11,12 @@
          crossorigin="anonymous"></script>
 
       <!-- QUE DEBO HACER EN LOS BOTONES DEL CATÁLOGO
-            OSEA, YA SIRVE COMO ME DIJO, Y YA TIENE LOS EFECTOS QUE LE METÍ, PERO AJÁ -->
+               OSEA, YA SIRVE COMO ME DIJO, Y YA TIENE LOS EFECTOS QUE LE METÍ, PERO AJÁ -->
 
 
       <script src="https://kit.fontawesome.com/323dc45883.js" crossorigin="anonymous"></script>
       <link rel="stylesheet" href="../../styles/catalogo.css" />
-      <script src="catalogo.js" defer></script>
+      <script src="catalogo.js" defer type="module"></script>
    </head>
 
    <body>
@@ -46,13 +46,13 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-lg multi-column" aria-labelledby="navbarDropdown">
                            <div class="d-flex text-light row col-12 text-center">
-                              <li class="col-md-3 col-sm-6"><a class="dropdown-item text-light" href="#"
+                              <li class="col-md-3 col-sm-6"><a class="dropdown-item text-light" href=""
                                     data-categoria="hombre"><strong>Hombre</strong></a></li>
-                              <li class="col-md-3 col-sm-6"><a class="dropdown-item text-light" href="#"
+                              <li class="col-md-3 col-sm-6"><a class="dropdown-item text-light" href=""
                                     data-categoria="mujer"><strong>Mujer</strong></a></li>
-                              <li class="col-md-3 col-sm-6"><a class="dropdown-item text-light" href="#"
+                              <li class="col-md-3 col-sm-6"><a class="dropdown-item text-light" href=""
                                     data-categoria="niño"><strong>Niño</strong></a></li>
-                              <li class="col-md-3 col-sm-6"><a class="dropdown-item text-light" href="#"
+                              <li class="col-md-3 col-sm-6"><a class="dropdown-item text-light" href=""
                                     data-categoria="nina"><strong>Niña</strong></a></li>
                            </div>
                         </ul>
@@ -120,64 +120,81 @@
             </section>
             <section>
                <div class="container-fluid w-100 ">
-                  <h1 class="text-center fw-bolder mt-5 ">Productos Destacados</h1>
-                  <div class="row mt-5 align-items-center d-flex d-grid  gap-4 m-auto  justify-content-center">
+                  <h2 class="text-center fw-bolder mt-5 ">Productos Destacados</h2>
+                  <div class="row mt-5 align-items-center d-flex d-grid gap-4 m-auto justify-content-center">
+                     <div class="col-md-3 d-flex justify-content-center">
+                        <div class="card ">
+                           <div class="card__content">
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-md-3 d-flex justify-content-center">
+                        <div class="card">
+                           <div class="card__content">
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-md-3 d-flex justify-content-center">
+                        <div class="card">
+                           <div class="card__content">
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-md-3 d-flex justify-content-center">
+                        <div class="card">
+                           <div class="card__content">
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-md-3 d-flex justify-content-center">
+                        <div class="card">
+                           <div class="card__content">
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-md-3 d-flex justify-content-center">
+                        <div class="card">
+                           <div class="card__content">
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
 
-                     <div class="col-md-3 ">
+               <div class="container-fluid w-100 ">
+                  <h2 class="text-center fw-bolder mt-5 ">Productos Recientes</h2>
+                  <div class="row mt-5 align-items-center d-flex d-grid gap-4 m-auto justify-content-center">
+                     <div class="col-md-3 d-flex justify-content-center">
+                        <div class="card ">
+                           <div class="card__content">
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-md-3 d-flex justify-content-center">
                         <div class="card">
                            <div class="card__content">
                            </div>
                         </div>
                      </div>
-                     <div class="col-md-3">
+                     <div class="col-md-3 d-flex justify-content-center">
                         <div class="card">
                            <div class="card__content">
                            </div>
                         </div>
                      </div>
-                     <div class="col-md-3">
+                     <div class="col-md-3 d-flex justify-content-center">
                         <div class="card">
                            <div class="card__content">
                            </div>
                         </div>
                      </div>
-                     <div class="col-md-3">
+                     <div class="col-md-3 d-flex justify-content-center">
                         <div class="card">
                            <div class="card__content">
                            </div>
                         </div>
                      </div>
-                     <div class="col-md-3">
-                        <div class="card">
-                           <div class="card__content">
-                           </div>
-                        </div>
-                     </div>
-                     <div class="col-md-3">
-                        <div class="card">
-                           <div class="card__content">
-                           </div>
-                        </div>
-                     </div>
-                     <div class="col-md-3">
-                        <div class="card">
-                           <div class="card__content">
-                           </div>
-                        </div>
-                     </div>
-                     <div class="col-md-3">
-                        <div class="card">
-                           <div class="card__content">
-                           </div>
-                        </div>
-                     </div>
-                     <div class="col-md-3">
-                        <div class="card">
-                           <div class="card__content">
-                           </div>
-                        </div>
-                     </div>
-                     <div class="col-md-3">
+                     <div class="col-md-3 d-flex justify-content-center">
                         <div class="card">
                            <div class="card__content">
                            </div>
@@ -188,7 +205,7 @@
             </section>
          </main>
          <footer>
-            <div class="container-fluid bg-black">
+            <div class="container-fluid bg-black mt-5">
                <div class="container  bg-black p-0 mt-2 p-3 footer w-75">
                   <div class="row text-light cols-12 justify-content-center text-center">
                      <div class="col"><a href="" class="text-decoration-none text-light">Privacy Policy</div></a>
@@ -219,35 +236,3 @@
       </div>
    </body>
 </html>
-
-<!-- <div id="carouselExample" class="carousel slide">
-                  <div class="carousel-indicators">
-                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                  </div>
-                  <div class="carousel-inner">
-                     <div class="carousel-item active">
-                        <img src="../../assets/img/imgcarrusel1.avif" class="d-block w-100" alt="..." id="carrusel" />
-                     </div>
-                     <div class="carousel-item">
-                        <img src="../../assets/img/imgcarrusel2.jpg" class="d-block w-100" alt="..." id="carrusel" />
-                     </div>
-                     <div class="carousel-item">
-                        <img src="../../assets/img/imgcarrusel3.jpg" class="d-block w-100" alt="..." id="carrusel" />
-                     </div>
-                  </div>
-                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
-                     data-bs-slide="prev">
-                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                     <span class="visually-hidden">Previous</span>
-                  </button>
-                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
-                     data-bs-slide="next">
-                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                     <span class="visually-hidden">Next</span>
-                  </button>
-               </div> -->
